# llm_works

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check-format-and-lint.yaml
concurrent_django/: apps.py
concurrent_django/exercises/dining_philosophers/: arbitration.py  deadlock.py  run.py  shared.py
concurrent_django/exercises/mass_update/: __init__.py
concurrent_django/management/commands/: mass_update.py
concurrent_django/migrations/: 0001_initial.py  0002_randomresult.py
concurrent_django/models/: __init__.py  random_result.py  scroll.py
concurrent_django/tests/models/: test_random_result.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/tests/: test_settings.py
llm_centre/: apps.py
