[project]
name = "django_experiments"
requires-python = ">=3.9"
[tool.poetry]
name = "django_experiments"
version = "0.0.1"
description = "A bunch of experiments"
authors = [
  "raffclar"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "~2.30.0"
django = "~4.2.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
